Fixes alignment

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -118,6 +118,7 @@ $header: 66px;
 
 .app-container {
     @extend .position-relative;
+    @extend .mx-auto;
     max-width:1200px;
     height:100%;
     overflow: hidden;
